--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -65,6 +65,9 @@
     <ClInclude Include="World\Character.h">
       <Filter>World</Filter>
     </ClInclude>
+    <ClInclude Include="Framework\Time.h">
+      <Filter>Framework</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Modding">
@@ -131,6 +134,9 @@
     </ClCompile>
     <ClCompile Include="World\Character.cpp">
       <Filter>World</Filter>
+    </ClCompile>
+    <ClCompile Include="Framework\Time.cpp">
+      <Filter>Framework</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
