--- a/Core/Core.vcxproj
+++ b/Core/Core.vcxproj
@@ -150,7 +150,8 @@
       <AdditionalDependencies>Dbghelp.lib</AdditionalDependencies>
     </Lib>
     <PostBuildEvent>
-      <Command>xcopy "$(ProjectDir)..\Resources" "$(TargetDir)" /e /y /i /r</Command>
+      <Command>
+      </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -178,7 +179,8 @@
       <AdditionalDependencies>Dbghelp.lib</AdditionalDependencies>
     </Lib>
     <PostBuildEvent>
-      <Command>xcopy "$(ProjectDir)..\Resources" "$(TargetDir)" /e /y /i /r</Command>
+      <Command>
+      </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -202,7 +204,8 @@
       <AdditionalDependencies>Dbghelp.lib</AdditionalDependencies>
     </Lib>
     <PostBuildEvent>
-      <Command>xcopy "$(ProjectDir)..\Resources" "$(TargetDir)" /e /y /i /r</Command>
+      <Command>
+      </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -230,7 +233,8 @@
       <AdditionalDependencies>Dbghelp.lib</AdditionalDependencies>
     </Lib>
     <PostBuildEvent>
-      <Command>xcopy "$(ProjectDir)..\Resources" "$(TargetDir)" /e /y /i /r</Command>
+      <Command>
+      </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
