--- a/Executable/Executable.vcxproj
+++ b/Executable/Executable.vcxproj
@@ -106,8 +106,8 @@
       <AdditionalDependencies>Lua.lib;Game.lib;INIReader.lib;ArtemisCore.lib;Dbghelp.lib;SDL2.lib;SDL2Main.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>
-      </Command>
+      <Command>RD /S /Q "D:\Daniel\Artemis\x64\Debug\Mods"
+xcopy "D:\Daniel\Artemis\Resources" "D:\Daniel\Artemis\x64\Debug" /e /y /i /r</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -129,8 +129,8 @@
       <AdditionalDependencies>Lua.lib;Game.lib;INIReader.lib;ArtemisCore.lib;Dbghelp.lib;SDL2.lib;SDL2Main.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>
-      </Command>
+      <Command>RD /S /Q "D:\Daniel\Artemis\x64\Debug\Mods"
+xcopy "D:\Daniel\Artemis\Resources" "D:\Daniel\Artemis\x64\Debug" /e /y /i /r</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -148,8 +148,8 @@
       <AdditionalDependencies>Lua.lib;Game.lib;INIReader.lib;ArtemisCore.lib;Dbghelp.lib;SDL2.lib;SDL2Main.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>
-      </Command>
+      <Command>RD /S /Q "D:\Daniel\Artemis\x64\Debug\Mods"
+xcopy "D:\Daniel\Artemis\Resources" "D:\Daniel\Artemis\x64\Debug" /e /y /i /r</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -171,8 +171,8 @@
       <AdditionalDependencies>Lua.lib;Game.lib;INIReader.lib;ArtemisCore.lib;Dbghelp.lib;SDL2.lib;SDL2Main.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>
-      </Command>
+      <Command>RD /S /Q "D:\Daniel\Artemis\x64\Debug\Mods"
+xcopy "D:\Daniel\Artemis\Resources" "D:\Daniel\Artemis\x64\Debug" /e /y /i /r</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
