--- a/Lua/Lua.vcxproj
+++ b/Lua/Lua.vcxproj
@@ -22,6 +22,7 @@
     <ClCompile Include="Core\GlobalState.cpp" />
     <ClCompile Include="Core\LuaInstance.cpp" />
     <ClCompile Include="Core\LuaState.cpp" />
+    <ClCompile Include="Core\LuaTable.cpp" />
     <ClCompile Include="Exceptions\LuaErrorMessageException.cpp" />
     <ClCompile Include="Exceptions\LuaException.cpp" />
     <ClCompile Include="Exceptions\LuaIOException.cpp" />
@@ -36,6 +37,7 @@
     <ClInclude Include="Core\LuaInstance.h" />
     <ClInclude Include="Core\LuaMagicNumbers.h" />
     <ClInclude Include="Core\LuaState.h" />
+    <ClInclude Include="Core\LuaTable.h" />
     <ClInclude Include="Exceptions\LuaErrorMessageException.h" />
     <ClInclude Include="Exceptions\LuaException.h" />
     <ClInclude Include="Exceptions\LuaIOException.h" />
