--- a/Lua/Lua.vcxproj.filters
+++ b/Lua/Lua.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="Core\GlobalState.cpp">
       <Filter>Core</Filter>
     </ClCompile>
+    <ClCompile Include="Core\LuaTable.cpp">
+      <Filter>Core</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Core\LuaInstance.h">
@@ -72,6 +75,9 @@
       <Filter>Core</Filter>
     </ClInclude>
     <ClInclude Include="Core\LuaMagicNumbers.h">
+      <Filter>Core</Filter>
+    </ClInclude>
+    <ClInclude Include="Core\LuaTable.h">
       <Filter>Core</Filter>
     </ClInclude>
   </ItemGroup>
