--- a/Lua/Lua.vcxproj
+++ b/Lua/Lua.vcxproj
@@ -140,7 +140,7 @@
     </Link>
     <Lib />
     <Lib>
-      <AdditionalDependencies>ArtemisCore.lib</AdditionalDependencies>
+      <AdditionalDependencies>ArtemisCore.lib;lua5.4.2.lib</AdditionalDependencies>
     </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -167,7 +167,7 @@
     </Link>
     <Lib />
     <Lib>
-      <AdditionalDependencies>ArtemisCore.lib</AdditionalDependencies>
+      <AdditionalDependencies>ArtemisCore.lib;lua5.4.2.lib</AdditionalDependencies>
     </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -190,7 +190,7 @@
     </Link>
     <Lib />
     <Lib>
-      <AdditionalDependencies>ArtemisCore.lib</AdditionalDependencies>
+      <AdditionalDependencies>ArtemisCore.lib;lua5.4.2.lib</AdditionalDependencies>
     </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -217,19 +217,17 @@
     </Link>
     <Lib />
     <Lib>
-      <AdditionalDependencies>ArtemisCore.lib</AdditionalDependencies>
+      <AdditionalDependencies>ArtemisCore.lib;lua5.4.2.lib</AdditionalDependencies>
     </Lib>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="..\packages\nlohmann.json.3.9.1\build\native\nlohmann.json.targets" Condition="Exists('..\packages\nlohmann.json.3.9.1\build\native\nlohmann.json.targets')" />
-    <Import Project="..\packages\lua.5.4.2\build\native\Lua.targets" Condition="Exists('..\packages\lua.5.4.2\build\native\Lua.targets')" />
   </ImportGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\nlohmann.json.3.9.1\build\native\nlohmann.json.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\nlohmann.json.3.9.1\build\native\nlohmann.json.targets'))" />
-    <Error Condition="!Exists('..\packages\lua.5.4.2\build\native\Lua.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\lua.5.4.2\build\native\Lua.targets'))" />
   </Target>
 </Project>
