--- a/Testing/Testing.vcxproj
+++ b/Testing/Testing.vcxproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AllocatorUtilityTest.cpp" />
+    <ClCompile Include="ExceptionTests.cpp" />
     <ClCompile Include="LinearAllocatorTest.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
