--- a/Testing/Testing.vcxproj
+++ b/Testing/Testing.vcxproj
@@ -43,6 +43,7 @@
     <ClCompile Include="AllocatorUtilityTest.cpp" />
     <ClCompile Include="ExceptionTests.cpp" />
     <ClCompile Include="LinearAllocatorTest.cpp" />
+    <ClCompile Include="MathTest.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
